--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-This is a test page by haja (pushing second time)
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jenkins Auto-Build</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            color: #4CAF50;
+        }
+        p {
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <h1>Jenkins Auto-Build</h1>
+    <p>This page was automatically built by Jenkins when a Git push occurred.</p>
+    <p>Build Date: <!-- Insert Jenkins build date or timestamp here --></p>
+</body>
+</html>
+
