--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jenkins Auto-Build</title>
+    <title>Jenkins-Git Task</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,8 +20,8 @@
     </style>
 </head>
 <body>
-    <h1>Jenkins Auto-Build</h1>
-    <p>This page was automatically built by Jenkins when a Git push occurred.</p>
+    <h1>Jenkins-Git Task</h1>
+    <p>This is a test page.</p>
     <p>Build Date: <!-- Insert Jenkins build date or timestamp here --></p>
 </body>
 </html>
